; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_pipe.c_mac_pipe_check_label_update.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_pipe.c_mac_pipe_check_label_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pipe = type { i32 }
%struct.label = type { i32 }

@pipe_check_label_update = common dso_local global i32 0, align 4
@mac_pipe_enforce = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.pipe*, %struct.label*)* @mac_pipe_check_label_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mac_pipe_check_label_update(i32 %0, %struct.pipe* %1, %struct.label* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.pipe*, align 8
  %6 = alloca %struct.label*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.pipe* %1, %struct.pipe** %5, align 8
  store %struct.label* %2, %struct.label** %6, align 8
  %8 = load i32, i32* @pipe_check_label_update, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.pipe*, %struct.pipe** %5, align 8
  %11 = load %struct.pipe*, %struct.pipe** %5, align 8
  %12 = getelementptr inbounds %struct.pipe, %struct.pipe* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.label*, %struct.label** %6, align 8
  %15 = call i32 @MAC_CHECK(i32 %8, i32 %9, %struct.pipe* %10, i32 %13, %struct.label* %14)
  %16 = load i32, i32* %7, align 4
  ret i32 %16
}

declare dso_local i32 @MAC_CHECK(i32, i32, %struct.pipe*, i32, %struct.label*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
